Fixed a couple glitches that caused items to not appear correctly on mobile.

--- a/src/Components/BackgroundImage/BackgroundImage.css
+++ b/src/Components/BackgroundImage/BackgroundImage.css
@@ -24,5 +24,6 @@
   .BackgroundImage {
     height: auto;
     min-height: 95vh;
+    background-attachment: scroll;
   }
 }
