--- a/src/Components/Skills/Skill/Skill.css
+++ b/src/Components/Skills/Skill/Skill.css
@@ -19,7 +19,7 @@
 
 @media (max-width: 500px) {
   .CircleCard {
-    height: 250px;
-    width: 250px;
+    height: 280px;
+    width: 280px;
   }
 }
